fix sonarcloud code smells